Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,9 @@ trigger:
 - main
 
 pool:
-  vmImage: web-goat-pool
+  name: 'web-goat-pool'
+  demands:
+  - npm
 
 steps:
 - script: echo Hello, world!
