--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,10 +10,11 @@ trigger:
 pool: web-goat-pool
 
 steps:
+
 - task: Maven@4
   displayName: Maven Install
   inputs:
-    mavenPomFile: 'WebGoat/pom.xml'
+    mavenPomFile: 'WebGoatProject/pom.xml'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
